--- a/week2/oj-client/src/app/components/navbar/navbar.component.html
+++ b/week2/oj-client/src/app/components/navbar/navbar.component.html
@@ -22,13 +22,8 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li *ngIf="!auth.isAuthenticated()">
-          <form class="navbar-form"> 
-            <button type="button" class="btn btn-primary" (click)="login()" >Sign in</button>
-          </form>
-        </li>
 
-        <li class="dropdown" *ngIf="auth.isAuthenticated()">
+        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             {{profile?.name}}
             <span class="caret"></span></a>
