--- a/week2/oj-client/src/app/components/problem-detail/problem-detail.component.html
+++ b/week2/oj-client/src/app/components/problem-detail/problem-detail.component.html
@@ -6,6 +6,8 @@
     <p>
       {{problem.desc}}
     </p>
-
+  </div>
+  <div class="hidden-xs col-sm-12 col-md-8">
+    <app-editor></app-editor>
   </div>
 </div>
